[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/textures/XBAlpha_In_place.gltf" type="PackedScene" id=1]
[ext_resource path="res://scripts/XBAlphaTest.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4
height = 1.1

[sub_resource type="SphereShape" id=2]

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
network_tick_rate = NodePath("NetworkTickRate")
movement_tween = NodePath("MovementTween")

[node name="XBAlpha_In_place" parent="." instance=ExtResource( 1 )]

[node name="Skeleton" parent="XBAlpha_In_place/Armature" index="0"]
bones/35/bound_children = [ NodePath("BoneAttachment") ]

[node name="BoneAttachment" type="BoneAttachment" parent="XBAlpha_In_place/Armature/Skeleton" index="1"]
transform = Transform( -0.0108954, 0.427489, 0.903955, 0.495725, 0.787407, -0.366397, -0.868411, 0.444121, -0.220496, -0.0819334, 1.23847, 0.467076 )
bone_name = "RightHand"

[node name="Pick_Point" type="Position3D" parent="XBAlpha_In_place/Armature/Skeleton/BoneAttachment"]
transform = Transform( 0.962718, 0.2655, 0.0518267, -0.2563, 0.956526, -0.139173, -0.086524, 0.120701, 0.988912, -0.00375886, 0.0331542, 0.163719 )

[node name="AnimationPlayer" parent="XBAlpha_In_place" index="1"]
physics_interpolation_mode = 2

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0249905, 0.999688, 0, -0.999688, 0.0249905, 0, 0.95, 0 )
shape = SubResource( 1 )

[node name="PickArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PickArea"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0.00119781, 0.0103073, -0.00268555 )
shape = SubResource( 2 )

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="MovementTween" type="Tween" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.996599, 0.0623012, -0.0539271, 0.0448242, 0.959064, 0.279619, 0.0691401, 0.276251, -0.958595, -0.124605, 1.55815, 0.566128 )
current = true
fov = 78.9

[node name="RayCast" type="RayCast" parent="Camera"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 3.03853e-08, 0.00308561, -0.347568 )
cast_to = Vector3( 0, -1, -25 )

[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]

[editable path="XBAlpha_In_place"]
